objects/mirketappm__Project__c.object
<CustomObject>
    <description>project object of ppm.</description>
    <fields>
        <fullName>mirketappm__Approved_Status__c</fullName>
        <label>Approved Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mirketappm__Budget_Time__c</fullName>
        <description>time required to complete project</description>
        <label>Budget Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mirketappm__Budget_Value__c</fullName>
        <description>project budget in dollars</description>
        <label>Budget Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mirketappm__End_Date__c</fullName>
        <description>date when project finishes</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mirketappm__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_Project_Key__c</fullName>
        <description>contains Id of jira the project</description>
        <label>Jira Project Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_Project_Name__c</fullName>
        <description>stores the project name from jira</description>
        <label>Jira Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_Worklog_Created_Date__c</fullName>
        <description>date when worklog is created on jira</description>
        <label>Jira Worklog Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_Worklog_Id__c</fullName>
        <externalId>true</externalId>
        <label>Jira Worklog Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_Worklog_Updated_Date__c</fullName>
        <description>date- if worklog is updated on jira</description>
        <label>Jira Worklog Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mirketappm__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mirketappm__Project_Type__c</fullName>
        <description>type of project</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in-house</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mirketappm__Stage__c</fullName>
        <description>status of project</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mirketappm__Start_Date__c</fullName>
        <description>date when project starts.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>mirketappm__All</fullName>
        <columns>NAME</columns>
        <columns>mirketappm__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>mirketappm__ProjectListView</fullName>
        <columns>NAME</columns>
        <columns>mirketappm__End_Date__c</columns>
        <columns>mirketappm__Start_Date__c</columns>
        <columns>mirketappm__Budget_Value__c</columns>
        <columns>mirketappm__Budget_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>mirketappm__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ProjectListView</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>